overflow fixed

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -444,6 +444,28 @@ div.App {
       h2 {
         font-size: 1.5rem;
       }
+      .images {
+        .gallery__item--3 {
+          grid-row-start: 1;
+          grid-row-end: 4;
+        }
+        .gallery__item--2 {
+          grid-row-start: 4;
+          grid-row-end: 5;
+        }
+        .gallery__item--1 {
+          grid-row-start: 1;
+          grid-row-end: 5;
+        }
+        .gallery__item--4 {
+          grid-row-start: 1;
+          grid-row-end: 2;
+        }
+        .gallery__item--5 {
+          grid-row-start: 2;
+          grid-row-end: 5;
+        }
+      }
     }
     nav {
       justify-content: space-evenly;
